--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "framer-motion": "^7.5.3",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^18.2.0",
