--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
   "devDependencies": {
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "@types/react-dom": "^18.0.6"
   }
 }
