--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.5",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@next/eslint-plugin-next": "^12.3.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^7.5.3",
