UPDATE: update yarn and some files were added

--- a/package.json
+++ b/package.json
@@ -1,31 +1,4 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^2.3.5",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@next/eslint-plugin-next": "^12.3.1",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.28.0",
-    "framer-motion": "^7.5.3",
-    "gray-matter": "^4.0.3",
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
-    "typescript": "^4.7.4"
-  },
-  "devDependencies": {
-    "@types/node": "^18.0.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6"
-  }
+  "name": "hskpg_blog_next_ts",
+  "packageManager": "yarn@3.2.4"
 }
