--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "eslint": "^8.26.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^13.0.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
