--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.3.5",
+    "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@next/eslint-plugin-next": "^12.3.1",
@@ -16,7 +16,7 @@
     "date-fns": "^2.28.0",
     "framer-motion": "^7.5.3",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
