--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/eslint-plugin-next": "^12.3.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
