--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^7.5.3",
+    "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
     "next": "^13.1.2",
     "react": "^18.2.0",
