--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
-    "remark-rehype": "^10.1.0"
+    "remark-rehype": "^10.1.0",
+    "remark-strip-badges": "^6.0.1",
+    "remark-strip-html": "^1.0.2",
+    "remove-markdown": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
