--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/eslint-plugin-next": "^12.3.1",
+    "@types/remark-prism": "^1.3.4",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^7.5.3",
@@ -25,6 +26,8 @@
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-highlight": "^6.0.0",
+    "rehype-parse": "^8.0.4",
     "rehype-raw": "^6.1.1",
     "rehype-react": "^7.1.2",
     "rehype-stringify": "^9.0.3",
@@ -32,10 +35,12 @@
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
+    "remark-prism": "^1.3.6",
     "remark-rehype": "^10.1.0",
     "remark-strip-badges": "^6.0.1",
     "remark-strip-html": "^1.0.2",
-    "remove-markdown": "^0.5.0"
+    "remove-markdown": "^0.5.0",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
