--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-format": "^4.0.1",
     "rehype-highlight": "^6.0.0",
     "rehype-parse": "^8.0.4",
     "rehype-raw": "^6.1.1",
