--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "remark-rehype": "^10.1.0",
     "remark-strip-badges": "^6.0.1",
     "remark-strip-html": "^1.0.2",
+    "remark-toc": "^8.0.1",
     "remark-unwrap-images": "^3.0.1",
     "remove-markdown": "^0.5.0",
     "unified": "^10.1.2"
