--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
     "next": "^13.1.2",
+    "prism-themes": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-format": "^4.0.1",
