--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rehype-parse": "^8.0.4",
     "rehype-raw": "^6.1.1",
     "rehype-react": "^7.1.2",
+    "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
     "remark-breaks": "^3.0.2",
