--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prism-themes": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-format": "^4.0.1",
     "rehype-highlight": "^6.0.0",
     "rehype-parse": "^8.0.4",
