--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/gen-rss.js && next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
