--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "remark-unwrap-images": "^3.0.1",
     "remove-markdown": "^0.5.0",
     "rss": "^1.2.2",
+    "sharp": "^0.32.0",
     "unified": "^10.1.2"
   },
   "devDependencies": {
